第七章节完成

--- a/typeidea/themes/bootstrap/templates/blog/detail.html
+++ b/typeidea/themes/bootstrap/templates/blog/detail.html
@@ -5,7 +5,7 @@
         <hl>{{ post.title }}</hl>
         <div>
         <span>分类:{{ post.category.name }}</span>
-        <span>作者:{{ psot.owner.username }}</span>
+        <span>作者:{{ post.owner.username }}</span>
         </div>
         <hr/>
         <p>
